welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:24: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:27: error: expected start of definition
	override def forward()  {
                 ^Diagonal:30: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:33: error: expected start of definition
	override def backward() {
                 ^Diagonal:36: error: Unmatched closing brace '}' ignored here
}
^