welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
	for(y<-0 to getMondeHauteur()-1) {
		setPos(y,y)
		ecritMessage(c)
		c=c+1
	}
	for (y<-1 to getMondeHauteur()-1) 
	{ 
		for (x<-0 to getMondeHauteur()-1) 
	{	setPos(y,y)
		ecritMessage(c)
		
		c=c+1
	}
setPos(y,y)
	}
setPos(6,6)
}

}
